--- a/static/player/newUpgradeModal.de.html
+++ b/static/player/newUpgradeModal.de.html
@@ -787,7 +787,7 @@
               Nach dem Upgrade sende ich Ihnen eine persönliche E-Mail, auf die Sie direkt antworten können - und ich werde persönlich antworten.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              Ihr Vertrauen und Ihre Unterstützung werden sehr geschätzt und ich bin persönlich verpflichtet, Ihre Zufriedenheit zu gewährleisten. —<strong>Vollständige Rückerstattung</strong> im unwahrscheinlichen Fall, dass Sie Ihren Kauf aus irgendeinem Grund bereuen.<br/><br/>Vielen Dank!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              Ihr Vertrauen und Ihre Unterstützung werden sehr geschätzt und ich bin persönlich Ihrer Zufriedenheit verpflichtet. —<strong>Vollständige Rückerstattung</strong> in dem unwahrscheinlichen Fall, dass Sie Ihren Kauf aus irgendeinem Grund bereuen.<br/><br/>Vielen Dank!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
