--- a/static/player/newUpgradeModal.it.html
+++ b/static/player/newUpgradeModal.it.html
@@ -787,7 +787,7 @@
               Dopo l'aggiornamento, ti invierò una email personale, alla quale potrai rispondere direttamente - e risponderò personalmente.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              La tua fiducia e il tuo supporto sono molto apprezzati e sono personalmente impegnato nella tua soddisfazione. —<strong>Rimborso completo</strong> nel caso improbabile che tu rimpianga il tuo acquisto per qualsiasi motivo.<br/><br/>Grazie!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              La tua fiducia e il tuo sostegno sono molto apprezzati e sono personalmente impegnato per la tua soddisfazione. —<strong>Rimborso completo</strong> nel caso improbabile in cui ti penta del tuo acquisto per qualsiasi motivo.<br/><br/>Grazie!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
