--- a/static/player/newUpgradeModal.ja.html
+++ b/static/player/newUpgradeModal.ja.html
@@ -787,7 +787,7 @@
               アップグレード後、あなたに個人的なメールをお送りします。直接返信していただけます - そして私は個人的に返信します。<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              あなたの信頼とサポートは非常に高く評価されており、私は個人的にあなたの満足度にコミットしています。 —<strong>全額返金</strong> どのような理由でも購入を後悔するありそうもない場合に。<br/><br/>ありがとうございます！<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              あなたの信頼とサポートを深く感謝し、私は個人的にあなたの満足に責任を負います。 —何らかの理由で購入を後悔された場合の<strong>全額返金</strong>をお約束します。<br/><br/>ありがとうございます！<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
