--- a/static/player/newUpgradeModal.ro.html
+++ b/static/player/newUpgradeModal.ro.html
@@ -787,7 +787,7 @@
               După upgrade, vă voi trimite un email personal, la care puteți răspunde direct - și voi răspunde personal.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              Încrederea și sprijinul tău sunt foarte apreciate și sunt angajat personal satisfacției tale. —<strong>Rambursare completă</strong> în cazul improbabil că îți pare rău de achiziția ta din orice motiv.<br/><br/>Mulțumesc!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              Încrederea și sprijinul dumneavoastră sunt foarte apreciate și sunt personal angajat în satisfacția dumneavoastră. —<strong>Rambursare completă</strong> în cazul improbabil că vă pare rău de achiziție din orice motiv.<br/><br/>Mulțumesc!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
