--- a/static/player/newUpgradeModal.ar.html
+++ b/static/player/newUpgradeModal.ar.html
@@ -787,7 +787,7 @@
               بعد الترقية سأرسل لك بريداً إلكترونياً شخصياً، يمكنك الرد عليه مباشرة - وسأرد شخصياً.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              ثقتك ودعمك مقدران جداً وأنا ملتزم شخصياً برضاك. —<strong>استرداد كامل</strong> في الحالة غير المحتملة التي تندم فيها على شرائك لأي سبب كان.<br/><br/>شكراً!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              ثقتكم ودعمكم موضع تقدير كبير وأنا ملتزم شخصياً برضاكم. —<strong>استرداد كامل</strong> في الحالة المستبعدة أن تندموا على شرائكم لأي سبب.<br/><br/>شكراً لكم!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
