--- a/static/player/newUpgradeModal.he.html
+++ b/static/player/newUpgradeModal.he.html
@@ -787,7 +787,7 @@
               לאחר השדרוג אשלח אליכם אימייל אישי, תוכלו לענות עליו ישירות - ואענה באופן אישי.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              האמון והתמיכה שלכם חשובים לי מאוד ואני מחויב אישית לשביעות רצונכם. —<strong>החזר מלא</strong> במקרה הלא סביר שתתחרטו על הרכישה מכל סיבה שהיא.<br/><br/>תודה!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              האמון והתמיכה שלכם מוערכים מאוד ואני מחויב אישית לשביעות רצונכם. —<strong>החזר מלא</strong> במקרה הלא סביר שתתחרטו על הרכישה מכל סיבה שהיא.<br/><br/>תודה!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
