--- a/static/player/newUpgradeModal.hi.html
+++ b/static/player/newUpgradeModal.hi.html
@@ -787,7 +787,7 @@
               अपग्रेड के बाद मैं आपको एक व्यक्तिगत ईमेल भेजूंगा, जिसका आप सीधे जवाब दे सकते हैं - और मैं व्यक्तिगत रूप से जवाब दूंगा।<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              आपका विश्वास और समर्थन बहुत सराहनीय है और मैं व्यक्तिगत रूप से आपकी संतुष्टि के लिए समर्पित हूं। —<strong>पूर्ण वापसी</strong> उस असंभावित स्थिति में जब आप किसी भी कारण से अपनी खरीदारी पर पछताएं।<br/><br/>धन्यवाद!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              आपका भरोसा और समर्थन बहुत सराहनीय है और मैं व्यक्तिगत रूप से आपकी संतुष्टि के लिए प्रतिबद्ध हूं। —किसी भी कारण से आप अपनी खरीदारी पर पछताएं तो <strong>पूरा रिफंड</strong>।<br/><br/>धन्यवाद!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
