--- a/static/player/newUpgradeModal.ko.html
+++ b/static/player/newUpgradeModal.ko.html
@@ -787,7 +787,7 @@
               업그레이드 후 개인 이메일을 보내드리겠습니다. 직접 답장하실 수 있습니다 - 그리고 저는 개인적으로 답장하겠습니다.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              귀하의 신뢰와 지원은 매우 감사하며, 저는 귀하의 만족에 개인적으로 전념하고 있습니다. —<strong>전액 환불</strong> 어떤 이유로든 구매를 후회하는 있을 법하지 않은 경우에.<br/><br/>감사합니다!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              귀하의 신뢰와 지원에 깊이 감사드리며, 저는 개인적으로 귀하의 만족에 대해 책임을 집니다. —어떤 이유로든 구매를 후회하시는 경우 <strong>전액 환불</strong>을 약속드립니다.<br/><br/>감사합니다!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
