--- a/static/player/newUpgradeModal.nl.html
+++ b/static/player/newUpgradeModal.nl.html
@@ -787,7 +787,7 @@
               Na de upgrade stuur ik je een persoonlijke email, waar je direct op kunt antwoorden - en ik zal persoonlijk antwoorden.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              Je vertrouwen en steun worden zeer gewaardeerd en ik ben persoonlijk toegewijd aan je tevredenheid. —<strong>Volledige terugbetaling</strong> in het onwaarschijnlijke geval dat je spijt hebt van je aankoop om welke reden dan ook.<br/><br/>Bedankt!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              Uw vertrouwen en steun worden zeer gewaardeerd en ik ben persoonlijk toegewijd aan uw tevredenheid. —<strong>Volledige terugbetaling</strong> in het onwaarschijnlijke geval dat u spijt hebt van uw aankoop om welke reden dan ook.<br/><br/>Dank u!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
