--- a/static/player/newUpgradeModal.pt.html
+++ b/static/player/newUpgradeModal.pt.html
@@ -787,7 +787,7 @@
               Após a atualização, enviarei um email pessoal, ao qual você poderá responder diretamente - e responderei pessoalmente.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              Sua confiança e apoio são muito apreciados e estou pessoalmente comprometido com sua satisfação. —<strong>Reembolso completo</strong> no caso improvável de você se arrepender de sua compra por qualquer motivo.<br/><br/>Obrigado!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              Sua confiança e apoio são muito apreciados e estou pessoalmente comprometido com sua satisfação. —<strong>Reembolso total</strong> no caso improvável de se arrepender da compra por qualquer motivo.<br/><br/>Obrigado!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
