--- a/static/player/newUpgradeModal.ru.html
+++ b/static/player/newUpgradeModal.ru.html
@@ -787,7 +787,7 @@
               После обновления я отправлю вам личное письмо, на которое вы можете ответить напрямую - и я отвечу лично.<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              Ваше доверие и поддержка очень ценятся, и я лично привержен вашему удовлетворению. —<strong>Полный возврат</strong> в маловероятном случае, если вы пожалеете о своей покупке по какой-либо причине.<br/><br/>Спасибо!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              Ваше доверие и поддержка очень ценятся, и я лично привержен вашему удовлетворению. —<strong>Полный возврат</strong> в маловероятном случае, если вы пожалеете о покупке по любой причине.<br/><br/>Спасибо!<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
