--- a/static/player/newUpgradeModal.zh.html
+++ b/static/player/newUpgradeModal.zh.html
@@ -787,7 +787,7 @@
               升级后，我会给您发送一封个人邮件，您可以直接回复 - 我会亲自回复。<!-- Upon upgrade, I will send you a personal email, to which you may reply directly - and I will respond personally.-->
             </p>
             <p style="margin:0 0 10px 0;font-size:16px;line-height:1.6;color:#374151;">
-              您的信任和支持非常感激，我个人致力于您的满意度。 —<strong>全额退款</strong> 如果您因为任何原因后悔购买，这不太可能发生。<br/><br/>谢谢！<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
+              您的信任和支持非常宝贵，我个人承诺您的满意度。 —如果您因任何原因对购买感到后悔，我们承诺<strong>全额退款</strong>。<br/><br/>谢谢！<!-- Your trust and support are much appreciated and I am personally committed to your satisfaction. —<strong>Full refund</strong> in the unlikely case that you regret your purchase for any reason.<br/><br/>Thank you!-->
             </p>
 
             <!-- Signature -->
